# flickrer

./: AGENTS.md  README.md  pyproject.toml
.github/workflows/: test.yml
flickrer/: __init__.py  __main__.py  analyzer.py  auth.py  cli.py  config.py  db.py  fetcher.py  reviewer.py  uploader.py  utils.py
tests/: conftest.py  test_analyzer.py  test_db.py  test_fetcher.py
