[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "flickrer"
version = "0.1.0"
description = "Clean up your Flickr photostream - find duplicates, memes, and non-camera uploads"
requires-python = ">=3.11"
dependencies = [
    "flickr-api>=0.8",
    "typer>=0.15",
    "rich>=13",
    "platformdirs>=4",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.5",
    "ty>=0.0.59",
    "pytest>=8",
]

[project.scripts]
flickrer = "flickrer.cli:app"
